--- a/login.html
+++ b/login.html
@@ -56,54 +56,53 @@
     </nav>
     <!--/Navbar -->
 
-    <!--Formulaire-->
-    <div class="container">
-        <h2 style="text-align: center;">Contact</h2>
+
+    <!--login-->
+
+    <div class="container justify-content-center">
+        <p class="h4 mb-4">Login</p>
+        <p>...</p>
         <div class="row">
             <div class="input-group">
-                <div class="col-md-6">
-                    <label for="">Nom</label>
-                    <input type="text" class="form-control" value='' placeholder="" />
+                <div class="col-md-12">
+                    <label for="">Username</label>
+                    <input type="text" id="" class="form-control mb-4" placeholder="Username" style="width: 500px;">
                 </div>
-                <div class="col-md-6">
+
+                <div class="col-md-12">
                     <label for="">E-mail</label>
-                    <input type="text" class="form-control" value='' placeholder="" />
-                </div>
-                <div class="col-md-12">Sujet
-                    <input type="text" class="form-control" value='' placeholder="" />
-                </div>
-                <div class="col-md-12">Message
-                    <input type="text" class="form-control" value='' placeholder="" />
-                </div>
-                <div class="col text-center">
-                    <button class="btn btn-warning" type="button" data-toggle="" aria-pressed="false">
-                        OK
-                    </button>
+                    <input type="text" id="" class="form-control mb-4" value='' placeholder="E-mail"
+                        style="width: 500px;">
                 </div>
             </div>
         </div>
+
+        <!-- Sign in button -->
+        <button class="btn btn-info" type="submit">OK</button>
     </div>
-    <!--/formulaire-->
+    <!--/login-->
 
     <!-- Footer -->
-    <div class="d-flex flex-column" style="background-color: #007bff; background: linear-gradient(to right, #0062E6, #33AEFF);">
+    <div class="d-flex flex-column"
+        style="background-color: #007bff; background: linear-gradient(to right, #0062E6, #33AEFF);">
         <div id="page-content">
-          <div class="container text-center">
-            <div class="row justify-content-center">
-              <div class="col-md-7">
-                <h1 class="font-weight-light mt-4 text-white">Footer</h1>
-                <p class="lead text-white-50">...</p>
-              </div>
+            <div class="container text-center">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <h1 class="font-weight-light mt-4 text-white">Footer</h1>
+                        <p class="lead text-white-50">...</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
         <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-          <div class="container text-center">
-            <small>Copyright &copy; Your Website</small>
-          </div>
+            <div class="container text-center">
+                <small>Copyright &copy; Your Website</small>
+            </div>
         </footer>
     </div>
-  <!-- Footer -->
+    <!-- Footer -->
+
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -115,7 +114,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
